[package]
name = "hp-tracerled-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
env_logger = "0.11.5"
hidapi = "2.6.3"
log = "0.4.22"
strum = { version = "0.26.3", features = ["derive"] }
zerocopy = { version = "0.8.13", features = ["derive"] }
